Finalizando el feature de autenticación JWT